[package]
name = "fetch_silo_data"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }