[package]
name = "check_new_data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
